<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="top_header">Playlist maker</string>
    <string name="search_button">Поиск</string>
    <string name="media_library_button">Медиатека</string>
    <string name="settings_button">Настройки</string>
    <string name="settings_header">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="contact_support">Написать в техподдержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="return_back">Назад</string>
    <string name="share_button">Поделиться</string>
    <string name="license_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="generic_email_title_template">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="generic_email_body_template">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicum_link">https://practicum.yandex.ru/trainer/android-developer/</string>
    <string name="input_hint">Поиск</string>
    <string name="search_title">Поиск</string>
    <string name="main_email_address">zpe25@ya.ru</string>
    <string name="track_description">Track\'s image</string>
    <string name="go_to_details">go to details</string>
    <string name="close_button">Close button</string>
    <string name="nothing_was_found">Ничего не нашлось</string>
    <string name="no_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh_text">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="search_top_header">Вы искали</string>
    <string name="album_cover">Album cover</string>
    <string name="add_track_to_playlist">Add track to playlist</string>
    <string name="play_pause">Play/Pause</string>
    <string name="like_button">like button</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="initial_track_elapsed">00:00</string>
    <string name="medialibrary">Медиатека</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="empty_medialibrary">Ваша медитатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlist_found">Вы не создали\nни одного плейлиста</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_description">Sad smile within Note Sign</string>
    <string name="create_playlist">Новый Плейлист</string>
    <string name="title_required">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="not_found_image">not found image</string>
    <string name="playlist_created">Плейлист %1$s создан</string>
    <string name="is_finishing_playlist_creation">Завершить создание плейлиста?</string>
    <string name="finish_option">Завершить</string>
    <string name="cancel_option">Отмена</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="add_to_playlist_success">Добавлено в плейлист %1$s</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="more_options">Больше опций</string>
    <string name="share_playlist">Поделиться</string>
    <string name="no_description">Нет описания</string>
    <string name="yes_option">Да</string>
    <string name="playlist_remove_request">Хотите удалить плейлист?</string>
    <string name="no_option">Нет</string>
    <string name="remove_track_title">Удалить трек</string>
    <string name="remove_track_message">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="confirm_remove_option">Удалить</string>
    <string name="lost_data_warning">Все несохраненные данные будут потеряны</string>
    <string name="share_option">Поделиться</string>
    <string name="edit_option">Редактировать информацию</string>
    <string name="remove_option">Удалить плейлист</string>
    <string name="remove_playlist_request">Удалить плейлист</string>
    <string name="remove_playlist_confirmation">Хотите удалить плейлист «%1$s»?</string>
    <string name="save_button">Сохранить</string>
    <string name="edit_title">Редактировать</string>
    <string name="no_added_tracks">Треки не добавлены</string>
    <string name="no_tracks_message">В плейлисте нет треков</string>
    <string name="confirm_button">Ну и ладно</string>
    <string name="no_tracks_to_share">Нет треков, чтобы поделиться</string>
    <plurals name="tracks_plural">
        <item quantity="one">%1$d трек</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>
    <plurals name="minutes_plural">
        <item quantity="one">%1$d минута</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>
</resources>