<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MainScreen"
    android:theme="@style/AnotherTheme.Theme.PlaylistMaker">

    <Toolbar
        android:id="@+id/tbToolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:title="@string/settings_header" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/swNightMode"
        style="@style/SettingsFrameLayout.Switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dark_theme" />


    <FrameLayout
        android:id="@+id/flShareButton"
        style="@style/SettingsFrameLayout">

        <TextView
            style="@style/SettingsButton"
            android:text="@string/share_app" />

        <ImageView
            style="@style/SettingsImageView"
            android:contentDescription="@string/share_button"
            android:src="@drawable/social_networks" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/flSendToTechsupport"
        style="@style/SettingsFrameLayout">

        <TextView
            style="@style/SettingsButton"
            android:text="@string/contact_support" />

        <ImageView
            style="@style/SettingsImageView"
            android:contentDescription="@string/contact_support"
            android:src="@drawable/operator" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/flShowAgreement"
        style="@style/SettingsFrameLayout">

        <TextView
            style="@style/SettingsButton"
            android:text="@string/user_agreement" />

        <ImageView
            style="@style/SettingsImageView"
            android:contentDescription="@string/user_agreement"
            android:src="@drawable/arrow_forward" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>