<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_screen_color"
    android:orientation="vertical"
    android:padding="@dimen/dp_16">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/dp_52">

        <TextView
            style="@style/MessageTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:text="@string/top_header" />

    </FrameLayout>

    <Button
        android:id="@+id/search"
        style="@style/ButtonStyle"
        android:text="@string/search_button"
        app:icon="@drawable/search" />

    <Button
        android:id="@+id/media_library"
        style="@style/ButtonStyle"
        android:text="@string/media_library_button"
        app:icon="@drawable/media_library" />

    <Button
        android:id="@+id/settings"
        style="@style/ButtonStyle"
        android:text="@string/settings_button"
        app:icon="@drawable/settings" />

</LinearLayout>