<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_56"
    android:background="@drawable/topborder"
    android:orientation="horizontal">

    <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/search_button"
        app:icon="@drawable/search_icon"
        style="@style/bottom_menu_buttons" />

    <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/media_library_button"
        app:icon="@drawable/media_library"
        style="@style/bottom_menu_buttons" />

    <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/settings_button"
        app:icon="@drawable/settings"
        style="@style/bottom_menu_buttons" />

</LinearLayout>