<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MainScreen"
    tools:context=".medialibrary.ui.CreatePlaylistFragment">

    <Toolbar
        android:id="@+id/tbToolbar"
        style="@style/BackArrow.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:title="@string/create_playlist" />

    <com.example.android.playlistmaker.medialibrary.ui.ModifiedImageView
        android:id="@+id/ivPlaylistCover"
        style="@style/CreatePlaylistPreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/add_playlist" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/CreatePlaylistTextField.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:hint="@string/title_required">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPlaylistTitle"
            style="@style/CreatePlaylistTextField.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/CreatePlaylistTextField.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:hint="@string/description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPlaylistDescription"
            style="@style/CreatePlaylistTextField.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bCreatePlaylist"
        style="@style/CreatePlaylistButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:text="@string/create" />

</LinearLayout>
