<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MainScreen"
    android:background="?attr/colorSecondary"
    android:theme="@style/Theme.PlaylistMaker">

    <FrameLayout
        android:id="@+id/back_to_main"
        style="@style/TopHeader">

        <ImageView
            style="@style/TopHeaderImageView"
            android:contentDescription="@string/return_back" />

        <TextView
            style="@style/TopHeaderTextView"
            android:text="@string/search_title" />
    </FrameLayout>


    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="@dimen/dp_16"
        android:background="@drawable/rounded_textedit"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dp_8">

        <EditText
            android:id="@+id/inputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableStart="@drawable/search"
            android:drawablePadding="@dimen/dp_8"
            android:drawableTint="@color/search_hint"
            android:hint="@string/input_hint"
            android:inputType="text"
            android:maxLength="40"
            android:maxLines="1"
            android:minHeight="@dimen/dp_36"
            android:textColor="?attr/colorOnTertiary"
            android:textColorHint="@color/search_hint"
            android:textCursorDrawable="@drawable/custom_cursor" />

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/dp_12"
            android:src="@drawable/close_button"
            android:visibility="gone" />

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trackList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>