<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".AudioPlayerActivity">

        <FrameLayout
            android:id="@+id/flBackToMain"
            style="@style/TopHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                style="@style/TopHeaderImageView"
                android:contentDescription="@string/return_back" />

        </FrameLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/dp_24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/dp_24" />

        <ImageView
            android:id="@+id/ivTrackImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dp_24"
            android:contentDescription="@string/album_cover"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/flBackToMain"
            tools:srcCompat="@drawable/placeholder_no_cover" />

        <TextView
            android:id="@+id/tvTrackName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="400"
            android:textSize="@dimen/sp_22"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/ivTrackImage"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/tvArtistName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="400"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/tvTrackName"
            tools:text="Yesterday (Remastered 2009)" />

        <ImageView
            android:id="@+id/ivAddTrackToPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_52"
            android:contentDescription="@string/add_track_to_playlist"
            android:src="@drawable/add_to_playlist"
            app:layout_constraintEnd_toStartOf="@id/ivPlayButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/tvArtistName" />

        <ImageView
            android:id="@+id/ivPlayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/play_pause"
            android:src="@drawable/play"
            app:layout_constraintBottom_toBottomOf="@id/ivAddTrackToPlaylist"
            app:layout_constraintEnd_toStartOf="@id/ivAddTrackToPlaylist"
            app:layout_constraintStart_toEndOf="@id/ivLikeButton"
            app:layout_constraintTop_toTopOf="@id/ivAddTrackToPlaylist"
            app:layout_constraintVertical_bias="0.5" />

        <ImageView
            android:id="@+id/ivLikeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/like_button"
            android:src="@drawable/like"
            app:layout_constraintBottom_toBottomOf="@id/ivAddTrackToPlaylist"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/ivPlayButton" />

        <TextView
            android:id="@+id/tvTrackElapsed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:fontFamily="@font/ys_display_medium"
            android:text="3:33"
            android:textAlignment="center"
            android:textFontWeight="500"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/ivPlayButton" />

        <TextView
            android:id="@+id/tvTrackDuration"
            style="@style/AudioPlayer.Track.Description.Key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_40"
            android:text="@string/duration"
            app:layout_constraintEnd_toStartOf="@id/tvTrackDurationTime"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTrackElapsed" />

        <TextView
            android:id="@+id/tvTrackDurationTime"
            style="@style/AudioPlayer.Track.Description.Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvTrackDuration"
            app:layout_constraintTop_toBottomOf="@id/tvTrackElapsed"
            tools:text="3:33" />

        <TextView
            android:id="@+id/tvAlbum"
            style="@style/AudioPlayer.Track.Description.Key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/album"
            app:layout_constraintEnd_toStartOf="@id/tvAlbumName"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTrackDuration" />

        <TextView
            android:id="@+id/tvAlbumName"
            style="@style/AudioPlayer.Track.Description.Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvAlbum"
            app:layout_constraintTop_toBottomOf="@id/tvTrackDurationTime"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/tvYear"
            style="@style/AudioPlayer.Track.Description.Key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            app:layout_constraintEnd_toStartOf="@id/tvYearValue"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAlbum" />

        <TextView
            android:id="@+id/tvYearValue"
            style="@style/AudioPlayer.Track.Description.Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvYear"
            app:layout_constraintTop_toBottomOf="@id/tvAlbumName"
            tools:text="1965" />

        <TextView
            android:id="@+id/tvGenre"
            style="@style/AudioPlayer.Track.Description.Key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            app:layout_constraintEnd_toStartOf="@id/tvGenreValue"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvYear" />

        <TextView
            android:id="@+id/tvGenreValue"
            style="@style/AudioPlayer.Track.Description.Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvGenre"
            app:layout_constraintTop_toBottomOf="@id/tvYearValue"
            tools:text="Rock" />

        <TextView
            android:id="@+id/tvCountry"
            style="@style/AudioPlayer.Track.Description.Key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            app:layout_constraintEnd_toStartOf="@id/tvCountryValue"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvGenre" />

        <TextView
            android:id="@+id/tvCountryValue"
            style="@style/AudioPlayer.Track.Description.Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvCountry"
            app:layout_constraintTop_toBottomOf="@id/tvGenreValue"
            tools:text="Великобритания" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>