<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.playlistmaker.medialibrary.ui.PlaylistFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbNewPlaylist"
        style="@style/MaterialButton.MediaLibraryFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_playlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPlaylist"
        style="@style/PlaylistRecycleView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mbNewPlaylist" />


    <ImageView
        android:id="@+id/ivError"
        style="@style/PlaylistError"
        android:layout_width="@dimen/dp_120"
        android:layout_height="@dimen/dp_120"
        android:contentDescription="@string/not_found_image"
        android:src="@drawable/not_found_image"
        app:layout_constraintBottom_toTopOf="@+id/tvError"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mbNewPlaylist"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvError"
        style="@style/Text.MediaLibraryFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_playlist_found"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivError" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/grNoPlaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="ivError,tvError" />

</androidx.constraintlayout.widget.ConstraintLayout>